--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -144,12 +144,34 @@
           kenalin saya mochamad najib budi noorsyahbannie, saya adalah mahasiswa teknik informatika tahun 2020
         </p>
         <p class = "lead">
-          terimakasih telah melihat web saya. dan mungkin ini akhir dari perjalanan praktikum PBO tapi mungkin bukan akhir dari perjalanan saya untuk menjadi programer yang handal .
+          terimakasih telah melihat web kami. dan mungkin ini akhir dari perjalanan praktikum PBO tapi mungkin bukan akhir dari perjalanan saya untuk menjadi programer yang handal .
         </p>
         <center><p class = "lead">Adios</p></center>
       </div>
       <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
         <img class="rounded-lg-3" th:src="@{/img/img_1.png}" alt="" width="720">
+      </div>
+    </div>
+  </div>
+
+  <div class="b-example-divider"></div>
+
+  <div class="b-example-divider"></div>
+
+  <div class="container my-5">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+      <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+        <h1 class="display-4 fw-bold lh-1">tentang saya</h1>
+        <p class="lead">
+          Perkenalkan saya Moch Afif Tanuwijaya, Mahasiswa Teknik Informatika tahun 2020
+        </p>
+        <p class = "lead">
+          terimakasih telah melihat web kami. Semoga dengan terselesaikannya tugas ini dapat meningkatkan kemahiran kami dalam bidang programming .
+        </p>
+        <center><p class = "lead">Adios</p></center>
+      </div>
+      <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+        <img class="rounded-lg-3" th:src="@{/img/img_2.jpg}" alt="" width="720">
       </div>
     </div>
   </div>
